--- a/Admin/app/src/main/res/layout/fragment_sign.xml
+++ b/Admin/app/src/main/res/layout/fragment_sign.xml
@@ -12,8 +12,9 @@
 
         <EditText
             android:id="@+id/groupId"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:ems="10"
             android:hint="Group ID"
             android:inputType="number" />
