--- a/PokerUser/app/src/main/res/layout/fragment_fragment_show.xml
+++ b/PokerUser/app/src/main/res/layout/fragment_fragment_show.xml
@@ -13,15 +13,25 @@
             android:id="@+id/SessionsControlRelativeLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true">
+            android:layout_alignParentTop="true"
+            android:paddingBottom="20dp">
 
 
 
             <TextView
                 android:id="@+id/currentUser"
+                android:gravity="center"
+                android:layout_alignParentStart="true"
+                android:textAllCaps="true"
+                android:textSize="30dp"
+                android:layout_width="180dp"
+                android:layout_height="50dp"/>
+            <Button
                 android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_alignParentRight="true"
+                android:layout_width="90dp"
+                android:layout_height="50dp"
+                android:text="Result"/>
 
         </RelativeLayout>
 
