--- a/PokerUser/app/src/main/res/layout/question_item.xml
+++ b/PokerUser/app/src/main/res/layout/question_item.xml
@@ -24,7 +24,6 @@
                 android:id="@+id/QuestionTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:text="Test test test"
                 android:textSize="20dp"
                 android:textStyle="bold" />
@@ -33,6 +32,27 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/AnswerButton"
+            android:layout_width="90dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:backgroundTint="#2C7A73"
+            android:text="Answer" />
+        <TextView
+            android:id="@+id/userName"
+            android:layout_width="90dp"
+            android:layout_height="50dp"
+            android:visibility="invisible"
+            />
+        <TextView
+            android:id="@+id/idgroup"
+            android:layout_width="90dp"
+            android:layout_height="50dp"
+            android:visibility="invisible"
+            />
 
 
     </RelativeLayout>
