--- a/PokerUser/app/src/main/res/layout/fragment_fragment_show.xml
+++ b/PokerUser/app/src/main/res/layout/fragment_fragment_show.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:paddingBottom="20dp">
+            android:padding="20dp">
 
 
 
@@ -27,6 +27,7 @@
                 android:layout_width="180dp"
                 android:layout_height="50dp"/>
             <Button
+                android:id="@+id/result"
                 android:layout_centerHorizontal="true"
                 android:layout_alignParentRight="true"
                 android:layout_width="90dp"
