--- a/PokerUser/app/src/main/res/layout/fragment_fragment_show.xml
+++ b/PokerUser/app/src/main/res/layout/fragment_fragment_show.xml
@@ -14,25 +14,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:padding="20dp">
-
+            android:padding="10dp">
 
 
             <TextView
                 android:id="@+id/currentUser"
-                android:gravity="center"
-                android:layout_alignParentStart="true"
-                android:textAllCaps="true"
-                android:textSize="30dp"
                 android:layout_width="180dp"
-                android:layout_height="50dp"/>
+                android:layout_height="50dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:shadowColor="@color/colorPrimary"
+                android:layout_alignParentStart="true"
+                android:gravity="center_vertical"
+                android:textStyle="bold"
+                android:text="@string/user_name"
+                android:textAllCaps="true"
+                android:textSize="30dp" />
+
             <Button
                 android:id="@+id/result"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentRight="true"
                 android:layout_width="90dp"
                 android:layout_height="50dp"
-                android:text="Result"/>
+                android:layout_alignParentRight="true"
+                android:layout_centerHorizontal="true"
+                android:text="@string/result" />
 
         </RelativeLayout>
 
