--- a/PokerUser/app/src/main/res/layout/activity_main.xml
+++ b/PokerUser/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fragment_container"/>
+        android:id="@+id/fragment_container"
+        android:background="#A5ACAA"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
