--- a/PokerUser/app/src/main/res/layout/activity_main.xml
+++ b/PokerUser/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fragment_container"
-        android:background="#A5ACAA"
+        android:background="#201F1F"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
