--- a/PokerUser/app/src/main/res/layout/anwerresult_item.xml
+++ b/PokerUser/app/src/main/res/layout/anwerresult_item.xml
@@ -3,13 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
-    app:cardCornerRadius="4dp">
+    android:backgroundTint="#181825"
+    android:layout_marginBottom="7dp"
+    app:cardCornerRadius="7dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="4dp">
+        android:layout_margin="2dp">
 
 
         <LinearLayout
@@ -23,12 +24,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/question"
-
+                android:textColor="@color/colorPrimaryDark"
                 android:textStyle="bold" />
 
             <TextView
 
                 android:id="@+id/myNames"
+                android:textColor="@color/colorPrimaryDark"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/user_name"
@@ -44,7 +46,8 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:backgroundTint="#2C7A73"
+            android:backgroundTint="#A00F20"
+            android:textColor="@color/colorPrimaryDark"
             android:clickable="false"
             android:text="@string/value" />
 
