--- a/PokerUser/app/src/main/res/layout/fragment_sign.xml
+++ b/PokerUser/app/src/main/res/layout/fragment_sign.xml
@@ -25,7 +25,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="25sp"
             android:textStyle="bold"
-            android:textColor="#2C7A73" />
+            android:textColor="@color/colorPrimaryDark" />
     </RelativeLayout>
 
 
@@ -48,7 +48,7 @@
             android:hint="@string/groupid"
             android:inputType="number"
             android:textColor="#FFFFFF"
-            android:textColorHint="#1C7E74" />
+            android:textColorHint="@color/colorPrimaryDark" />
 
         <EditText
             android:id="@+id/Name"
@@ -63,19 +63,19 @@
             android:hint="@string/user_name"
             android:inputType="text"
             android:textColor="#FFFFFF"
-            android:textColorHint="#1C7E74" />
+            android:textColorHint="@color/colorPrimaryDark" />
 
         <Button
             android:id="@+id/open"
-            android:layout_width="90dp"
-            android:layout_height="50dp"
+            android:layout_width="71dp"
+            android:layout_height="60dp"
             android:layout_below="@id/Name"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="29dp"
-            android:textSize="16sp"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="@string/join"
             android:textColor="#eaf1e5"
-            android:backgroundTint="#2C7A73"
-            android:text="@string/join" />
+            android:textSize="16sp" />
 
 
     </RelativeLayout>
