--- a/Admin/app/src/main/res/layout/anwerresult_item.xml
+++ b/Admin/app/src/main/res/layout/anwerresult_item.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_marginBottom="4dp"
+    android:backgroundTint="#181825"
     app:cardCornerRadius="4dp">
 
     <RelativeLayout
@@ -23,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/question"
-
+                android:textColor="@color/colorPrimaryDark"
                 android:textStyle="bold" />
 
             <TextView
@@ -32,6 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/user_name"
+                android:textColor="@color/colorPrimaryDark"
                  />
 
 
@@ -43,8 +45,9 @@
             android:layout_height="100dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
+            android:backgroundTint="#A00F20"
+            android:textColor="@color/colorPrimaryDark"
             android:layout_centerVertical="true"
-            android:backgroundTint="#2C7A73"
             android:clickable="false"
             android:text="@string/value" />
 
