--- a/Admin/app/src/main/res/values/colors.xml
+++ b/Admin/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#FFFFFF</color>
     <color name="colorAccent">#3F51B5</color>
     <color name="Dark">#E9242B2C</color>
+    <color name="gray">#E9515555</color>
 </resources>
