--- a/PokerUser/app/src/main/res/layout/fragment_answer_result.xml
+++ b/PokerUser/app/src/main/res/layout/fragment_answer_result.xml
@@ -35,5 +35,9 @@
             android:scrollbars="vertical" />
 
     </RelativeLayout>
+    <include
+        android:id="@+id/llProgressBar"
+        android:visibility="gone"
+        layout="@layout/layout_progress_bar_with_text"/>
 
 </FrameLayout>
