--- a/PokerUser/app/src/main/res/layout/fragment_fragment_show.xml
+++ b/PokerUser/app/src/main/res/layout/fragment_fragment_show.xml
@@ -212,5 +212,9 @@
 
 
     </RelativeLayout>
+    <include
+        android:id="@+id/llProgressBar"
+        android:visibility="gone"
+        layout="@layout/layout_progress_bar_with_text"/>
 
 </FrameLayout>
