--- a/Admin/app/src/main/res/layout/fragment_fragment_show.xml
+++ b/Admin/app/src/main/res/layout/fragment_fragment_show.xml
@@ -24,9 +24,13 @@
         android:id="@+id/AddNewQuestion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|left"
+        android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
         android:backgroundTint="@color/colorPrimary"
         android:src="@drawable/ic_add_circle" />
+    <include
+        android:id="@+id/llProgressBar"
+        android:visibility="gone"
+        layout="@layout/layout_progress_bar_with_text"/>
 
 </FrameLayout>
