--- a/PokerUser/app/src/main/res/layout/fragment_fragment_show.xml
+++ b/PokerUser/app/src/main/res/layout/fragment_fragment_show.xml
@@ -33,6 +33,7 @@
 
             <Button
                 android:id="@+id/result"
+                android:visibility="gone"
                 android:layout_width="90dp"
                 android:layout_height="50dp"
                 android:layout_alignParentRight="true"
