--- a/Admin/app/src/main/res/layout/question_item.xml
+++ b/Admin/app/src/main/res/layout/question_item.xml
@@ -19,7 +19,7 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="0dp"
-            android:padding="2dp"
+            android:padding="1dp"
             android:src="@drawable/ic_help_black_24dp" />
 
 
@@ -46,11 +46,13 @@
 
         <CheckBox
             android:id="@+id/simpleSwitch"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_width="50dp"
-            android:layout_height="50dp"/>
+            android:buttonTint="#E1E9DCDC"
+            android:textColor="@color/colorPrimaryDark" />
 
 
     </RelativeLayout>
