--- a/Admin/app/src/main/res/values/colors.xml
+++ b/Admin/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#E2132B</color>
     <color name="colorPrimaryDark">#FFFFFF</color>
-    <color name="colorAccent">#3F51B5</color>
+    <color name="colorAccent">#E05E5E</color>
     <color name="Dark">#E9242B2C</color>
     <color name="gray">#E9515555</color>
 </resources>
